<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Student.StudentActivity">
    <RelativeLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"

            android:text="@string/answer"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold|italic"
            android:gravity="center"
            android:padding="10dp"
            ></TextView>
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/relativeImage"
            android:src="@drawable/ic_assignment"
            android:layout_centerInParent="true"></ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/studentText"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:layout_below="@+id/relativeImage"></TextView>

    </RelativeLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/studentFloatingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:src="@drawable/ic_add"
        android:layout_gravity="bottom|right"
        android:layout_margin="20dp"
        android:background="@drawable/bg_round"
        />
    <Button
        android:id="@+id/resBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_margin="20dp"
        android:background="@color/colorAccent"
        android:text="@string/btn"
        android:textColor="@android:color/white"></Button>
</FrameLayout>